完成vue2的双向绑定原理阶段2-模板编译

--- a/vue2的双向绑定原理/02.实现vue2的双向绑定/index.html
+++ b/vue2的双向绑定原理/02.实现vue2的双向绑定/index.html
@@ -7,13 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div id="app">
         <span>{{name}}</span>
         <span>{{age}}</span>
     </div>
     <script src="./vue.js"></script>
     <script>
         const vm = new Vue({
+            el:'#app',
             data:{
                 name: 'gs',
                 age: 18,
