完成data到页面的单向数据绑定

--- a/vue2的双向绑定原理/02.实现vue2的双向绑定/index.html
+++ b/vue2的双向绑定原理/02.实现vue2的双向绑定/index.html
@@ -10,6 +10,7 @@
     <div id="app">
         <span>{{name}}</span>
         <span>{{age}}</span>
+        <span>{{address.location}}</span>
     </div>
     <script src="./vue.js"></script>
     <script>
