完成vue2的双向绑定原理阶段4-文本框的单向数据绑定

--- a/vue2的双向绑定原理/02.实现vue2的双向绑定/index.html
+++ b/vue2的双向绑定原理/02.实现vue2的双向绑定/index.html
@@ -11,6 +11,8 @@
         <span>{{name}}</span>
         <span>{{age}}</span>
         <span>{{address.location}}</span>
+        <div>name的值:<input type="text" v-model="name"></div>
+        <div>location的值:<input type="text" v-model="address.location"></div>
     </div>
     <script src="./vue.js"></script>
     <script>
