完成小米商城主页的导航栏

--- a/CSS的学习/小米官网仿写/index.html
+++ b/CSS的学习/小米官网仿写/index.html
@@ -12,39 +12,52 @@
 </head>
 <body>
     <div class="header">
-        <div class="wrap">
-            <ul class="wrap-left">
-                <li><a href="#">小米商城</a><span>|</span></li>
-                <li><a href="#">MIUI</a><span>|</span></li>
-                <li><a href="#">loT</a><span>|</span></li>
-                <li><a href="#">云服务</a><span>|</span></li>
-                <li><a href="#">天星数科</a><span>|</span></li>
-                <li><a href="#">有品</a><span>|</span></li>
-                <li><a href="#">小爱开发平台</a><span>|</span></li>
-                <li><a href="#">企业团购</a><span>|</span></li>
-                <li><a href="#">资质证照</a><span>|</span></li>
-                <li><a href="#">协议规则</a><span>|</span></li>
-                <li><a href="#">下载app</a><span>|</span></li>
-                <li><a href="#">Select Location</a><span>|</span></li>
-            </ul>
-
-            <ul class="wrap-right">
-                <li><a href="#">登录</a><span>|</span></li>
-                <li><a href="#">注册</a><span>|</span></li>
-                <li><a href="#">消息通知</a><span>|</span></li>
-                <li class="cart">
-                    <a href="#">
-                        <em class="iconfont">&#xe70b;</em>
-                        购物车
-                        <span>(0)</span>
-                    </a>
-                    <div class="cart-list">
-                        <p>当前购物车中没有商品，请前往选购</p>
-                    </div>
-                </li>
-            </ul>
-
+        <div class="site-topbar">
+            <div class="wrap">
+                <ul class="wrap-left">
+                    <li><a href="#">小米商城</a><span>|</span></li>
+                    <li><a href="#">MIUI</a><span>|</span></li>
+                    <li><a href="#">loT</a><span>|</span></li>
+                    <li><a href="#">云服务</a><span>|</span></li>
+                    <li><a href="#">天星数科</a><span>|</span></li>
+                    <li><a href="#">有品</a><span>|</span></li>
+                    <li><a href="#">小爱开发平台</a><span>|</span></li>
+                    <li><a href="#">企业团购</a><span>|</span></li>
+                    <li><a href="#">资质证照</a><span>|</span></li>
+                    <li><a href="#">协议规则</a><span>|</span></li>
+                    <li>
+                        <a href="#" class="download-app">
+                        下载app
+                            <div class="triangle"></div>
+                            <div class="download-QR">
+                                <img src="./image/download.jpg" alt="小米商城">
+                                <p>小米商城App</p> 
+                            </div>
+                        </a>
+                        <span>|</span>
+                    </li>
+                    <li><a href="#">Select Location</a><span>|</span></li>
+                </ul>
+    
+                <ul class="wrap-right">
+                    <li><a href="#">登录</a><span>|</span></li>
+                    <li><a href="#">注册</a><span>|</span></li>
+                    <li><a href="#">消息通知</a><span>|</span></li>
+                    <li class="cart">
+                        <a href="#">
+                            <em class="iconfont">&#xe70b;</em>
+                            购物车
+                            <span>(0)</span>
+                        </a>
+                        <div class="cart-list">
+                            <p>当前购物车中没有商品，请前往选购</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
+        <div class="site-header"></div>
+
     </div>
     <script src="./less.min.js" type="text/javascript"></script>
 </body>
