--- a/CSS的学习/小米官网仿写/index.html
+++ b/CSS的学习/小米官网仿写/index.html
@@ -56,7 +56,36 @@
                 </ul>
             </div>
         </div>
-        <div class="site-header"></div>
+        <div class="site-header">
+            <div class="container">
+                <div class="header-logo">
+                    <a href="https://www.mi.com/index.html" alt="小米商城" class="logo"></a>
+                </div>
+                <div class="header-nav">
+                    <ul>
+                        <li><a href="#" class="whiteSpace"></a></li>
+                        <li><a href="#">Xiaomi手机</a></li>
+                        <li><a href="#">Redmi红米</a></li>
+                        <li><a href="#">电视</a></li>
+                        <li><a href="#">笔记本</a></li>
+                        <li><a href="#">平板</a></li>
+                        <li><a href="#">家电</a></li>
+                        <li><a href="#">路由器</a></li>
+                        <li><a href="#">服务</a></li>
+                        <li><a href="#">社区</a></li>
+                    </ul>
+                </div>
+                <div class="header-seacher">
+                    <input type="text" class="serach-input">
+                    <a href="#"><em class="iconfont">&#xe687;</em></a>
+                </div>
+            </div>
+            <div class="nav-menu">
+                <div class="container">
+                    
+                </div>
+            </div>
+        </div>
 
     </div>
     <script src="./less.min.js" type="text/javascript"></script>
