基于JavaScript，实现无缝轮播图的效果

--- a/CSS的学习/小米官网仿写/index.html
+++ b/CSS的学习/小米官网仿写/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小米商城</title>
     <link rel="shortcut icon" href="./image/bitbug_favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/font_39ib2coie25/iconfont.css">
+    <link rel="stylesheet" href="./css/font_vu37ww7nbpa/iconfont.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/mi.css">
 </head>
@@ -86,8 +86,47 @@
                 </div>
             </div>
         </div>
+        <div class="home">
+            <div class="home-main">
+                <div class="category">
+                    <ul class="category-ul">
+                        <li><a href="#">手机<em class="iconfont">&#xe65f;</em></a></li>
+                        <li><a href="#">电视<em class="iconfont">&#xe65f;</em></a></li>
+                        <li><a href="#">笔记本 平板<em class="iconfont">&#xe65f;</em></a></li>
+                        <li><a href="#">家电<em class="iconfont">&#xe65f;</em></a></li>
+                        <li><a href="#">出行 穿戴<em class="iconfont">&#xe65f;</em></a></li>
+                        <li><a href="#">智能 路由器<em class="iconfont">&#xe65f;</em></a></li>
+                        <li><a href="#">电源 配件<em class="iconfont">&#xe65f;</em></a></li>
+                        <li><a href="#">健康 儿童<em class="iconfont">&#xe65f;</em></a></li>
+                        <li><a href="#">耳机 音响<em class="iconfont">&#xe65f;</em></a></li>
+                        <li><a href="#">生活 箱包<em class="iconfont">&#xe65f;</em></a></li>
+                    </ul>
+                    <div class="content">这里有内容</div>
+                </div>
+                <div class="img-slider">
+                    <div class="slide-list">
+                        <img src="./image/swiper-img01.png" alt="" srcset="">
+                        <img src="./image/swiper-img02.png" alt="" srcset="">
+                        <img src="./image/swiper-img03.png" alt="" srcset="">
+                        <img src="./image//swiper-img04.png" alt="" srcset="">
+                    </div>
+                    <div class="btn-right btn-common"></div>
+                    <div class="btn-left btn-common"></div>
 
+                    <ul class="circle-list">
+                        <li class="circle" data-index="0"></li>
+                        <li class="circle" data-index="1"></li>
+                        <li class="circle" data-index="2"></li>
+                        <li class="circle" data-index="3"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="home-footer"></div>
+        </div>
+        
+         
     </div>
     <script src="./less.min.js" type="text/javascript"></script>
+    <script src="./index.js" type="text/javascript"></script>
 </body>
 </html>
